Fix alignment and remove spinner

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -49,6 +49,7 @@ page-home {
     display: flex;
     height: calc(100vh - 61px);
     align-items: center;
+    justify-content: center;
   }
 
   .restaurant {
